<resources>
    <string name="app_name">BlogApp Project</string>

    // activity_register.xml
    <string name="reguserphoto">userphoto</string>
    <string name="regName">이름</string>
    <string name="regMail">이메일</string>
    <string name="regPassword">비밀번호</string>
    <string name="regPassword2">비밀번호 확인</string>
    <string name="regButton">회원가입</string>

    // activity_login.xml
    <string name="logUserPhoto">userphoto</string>
    <string name="logMail">이메일</string>
    <string name="logPassword">비밀번호</string>
    <string name="logButton">로그인</string>
    <string name="logRegButton">회원가입</string>

    // Home.java
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    // home.xml
    <string name="action_settings">Settings</string>

    // nav_header_home.xml
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    // app_bar_home.xml
    <string name="fab">New Post</string>

    // activity_home2_drawer.xml
    <string name="nav_home">홈</string>
    <string name="nav_profile">프로필</string>
    <string name="nav_settings">설정</string>
    <string name="nav_signout">로그아웃</string>

    // popup_add_post.xml
    <string name="popup_user_image">popup_user_image</string>
    <string name="popup_image">popup_image</string>
    <string name="popup_add">popup_add</string>
    <string name="popup_title">제목</string>
    <string name="popup_description">내용</string>

    // row_post_item.xml
    <string name="row_post_image">row_post_image</string>
    <string name="black_gradient">black_gradient</string>
    <string name="row_post_user_image">row_post_user_image</string>
    <string name="post_title">post_title</string>

    // activity_post_detail.xml
    <string name="post_detail_img">post_detail_img</string>
    <string name="post_detail_title">post_detail_title</string>
    <string name="post_detail_date_name">post_detail_date_name</string>
    <string name="post_detail_desc">천고에 그러므로 없으면 커다란 크고 위하여, 없으면, 투명하되 물방아 끓는다. 이상 그러므로 피부가 석가는 낙원을 풀이 거친 공자는 이상은 때문이다. 봄바람을 이상이 위하여서 있으며, 것이다.</string>
    <string name="post_detail_currentuser_img">post_detail_currentuser_img</string>
    <string name="post_detail_comment_hint">댓글&#8230;</string>
    <string name="post_detail_add_comment_btn_hint">등록</string>
    <string name="post_detail_user_img">post_detail_user_img</string>

    // row_comment.xml
    <string name="comment_user_image">comment_user_image</string>
    <string name="comment_user_name">이름</string>
    <string name="comment_content">내용이 들어가용~</string>
    <string name="comment_date">HH:mm</string>

</resources>